Fix css on small screens

--- a/frontend/app-development/features/Contact.module.css
+++ b/frontend/app-development/features/Contact.module.css
@@ -7,6 +7,7 @@
 .pageContainer {
   background-color: #e6eff8;
   flex: 1;
+  font-family: var(--studio-font-family);
   position: relative;
 }
 
@@ -32,15 +33,16 @@
   flex-direction: column;
   position: relative;
 
-  margin: var(--fds-spacing-12) auto;
-  max-width: 1400px;
+  margin: var(--fds-spacing-10) auto;
+  max-width: 1230px;
 }
 
 .breadcrumb {
   display: flex;
   align-items: center;
-  font-size: 1.2rem;
-  margin: var(--fds-spacing-6);
+  font: var(--fds-typography-paragraph-large);
+  gap: var(--fds-spacing-2);
+  margin: var(--fds-spacing-8);
   margin-bottom: unset;
 }
 
@@ -48,7 +50,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--fds-spacing-6);
-  margin: var(--fds-spacing-12);
+  margin: var(--fds-spacing-12) var(--fds-spacing-8);
 }
 
 .heading {
@@ -59,19 +61,13 @@
   color: var(--primary-color-700);
 }
 
-@media (min-width: 768px) {
-  .pageContainer::before {
-    background-position: center 0;
-    background-size: 100% auto;
-  }
-}
-
 .block {
   background-color: #f4f5f6;
   border-radius: 4px;
   display: flex;
   gap: var(--fds-spacing-6);
-  padding: var(--fds-spacing-12);
+  padding: var(--fds-spacing-8);
+  max-width: 735px;
 }
 
 .iconContainer {
@@ -93,6 +89,27 @@
   flex: 1;
 }
 
-.link {
-  margin-top: 20px;
+.link a {
+  font-size: 1rem;
+}
+
+@media (min-width: 768px) {
+  .pageContainer::before {
+    background-position: center 0;
+    background-size: 100% auto;
+  }
+
+  .content {
+    margin: var(--fds-spacing-18);
+  }
+
+  .block {
+    padding: var(--fds-spacing-12);
+  }
+}
+
+@media (min-width: 960px) {
+  .block {
+    padding-right: var(--fds-spacing-22);
+  }
 }
